force-app/main/default/objects/ObjectFeb26__c/ObjectFeb26__c.object-meta.xml
<CustomObject>
    <description>This is a description for the object ObjectFeb26</description>
    <label>ObjectFeb26</label>
    <nameField>
        <label>ObjectFeb26 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectFeb26s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>