force-app/main/default/objects/ObjectFeb26__c/fields/ObjectFeb26_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ObjectFeb26_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ObjectFeb26 Checkbox</label>
    <type>Checkbox</type>
</CustomField>