force-app/main/default/objects/ObjectFeb26__c/fields/ObjectFeb26_Picklist__c.field-meta.xml
<CustomField>
    <fullName>ObjectFeb26_Picklist__c</fullName>
    <label>ObjectFeb26 Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>