force-app/main/default/objects/ObjectFeb26__c/fields/ObjectFeb26_Text__c.field-meta.xml
<CustomField>
    <fullName>ObjectFeb26_Text__c</fullName>
    <label>ObjectFeb26 Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>