force-app/main/default/objects/ObjectFeb26__c/listViews/My_ObjectFeb25s.listView-meta.xml
<ListView>
    <fullName>My_ObjectFeb25s</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My ObjectFeb25s</label>
</ListView>