force-app/main/default/objects/ObjectFeb26__c/listViews/Picklist_equals_One.listView-meta.xml
<ListView>
    <fullName>Picklist_equals_One</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectFeb26_Picklist__c</field>
        <operation>equals</operation>
        <value>One</value>
    </filters>
    <label>Picklist equals One</label>
</ListView>